# quran-poster-generator

./: LICENSE.txt  README.md  requirements.txt
quran-poster/: README.md  pyproject.toml  requirements.txt
quran-poster/conf/: logging.yml
quran-poster/conf/alaq/: catalog.yml  parameters.yml
quran-poster/conf/asr/: catalog.yml  parameters.yml
quran-poster/conf/base/: catalog.yml  parameters.yml
quran-poster/conf/kahf/: catalog.yml  parameters.yml
quran-poster/conf/mz/: catalog.yml  parameters.yml
quran-poster/conf/nur/: catalog.yml  parameters.yml
quran-poster/src/quran_poster/: __init__.py  __main__.py  settings.py
quran-poster/src/quran_poster/pipelines/data_processing/: nodes.py  pipeline.py
